# Django-Task-Manager

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: black.yml  django-tests.yaml  linters.yml
config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: LoginForm.tsx  NavBar.tsx  TodoList.tsx
task_manager/: fields.py  models.py  serializers.py  tests.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_category_created_by_category_name_task_assigned_to_and_more.py  0003_task_priority.py  0004_task_completed.py  0005_rename_created_by_category_creator.py  0006_alter_task_body_alter_task_created_at.py
